; ModuleID = '/home/carl/AnghaBench/freebsd/sys/x86/x86/extr_local_apic.c_amd_read_ext_features.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/x86/x86/extr_local_apic.c_amd_read_ext_features.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cpu_vendor_id = common dso_local global i64 0, align 8
@CPU_VENDOR_AMD = common dso_local global i64 0, align 8
@LAPIC_VERSION = common dso_local global i32 0, align 4
@APIC_VER_AMD_EXT_SPACE = common dso_local global i32 0, align 4
@LAPIC_EXT_FEATURES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @amd_read_ext_features to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @amd_read_ext_features() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i64, i64* @cpu_vendor_id, align 8
  %4 = load i64, i64* @CPU_VENDOR_AMD, align 8
  %5 = icmp ne i64 %3, %4
  br i1 %5, label %6, label %7

6:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %18

7:                                                ; preds = %0
  %8 = load i32, i32* @LAPIC_VERSION, align 4
  %9 = call i32 @lapic_read32(i32 %8)
  store i32 %9, i32* %2, align 4
  %10 = load i32, i32* %2, align 4
  %11 = load i32, i32* @APIC_VER_AMD_EXT_SPACE, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %7
  %15 = load i32, i32* @LAPIC_EXT_FEATURES, align 4
  %16 = call i32 @lapic_read32(i32 %15)
  store i32 %16, i32* %1, align 4
  br label %18

17:                                               ; preds = %7
  store i32 0, i32* %1, align 4
  br label %18

18:                                               ; preds = %17, %14, %6
  %19 = load i32, i32* %1, align 4
  ret i32 %19
}

declare dso_local i32 @lapic_read32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
